modificar metodos get de categoria y productos
