# src/routes/product.ts
@@ -5,9 +5,9 @@ import { ProductSchema } from '../schemas/product';
 
 const router = Router();
 
-router.get('/', tryCatch(ProductController.getAll));
+router.post('/', tryCatch(ProductController.getAll, ProductSchema.getAll()));
 router.get('/:id', tryCatch(ProductController.getById, ProductSchema.get()));
-router.post('/', tryCatch(ProductController.create, ProductSchema.create()));
+router.post('/create', tryCatch(ProductController.create, ProductSchema.create()));
 router.put('/:id', tryCatch(ProductController.update, ProductSchema.update()));
 router.delete('/:id', tryCatch(ProductController.delete, ProductSchema.delete()));
 
